# axum-twitter

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/controllers/lib/: errors.rs  response.rs
src/controllers/profiles/: profile_controller.rs  profile_parameters.rs
src/lib/: app_state.rs
src/repository/: repo.rs
src/repository/profiles/: profile_model.rs  profile_repo.rs
src/routes/: profiles_router.rs  root_router.rs
tests/: mod.rs
tests/routes/: profiles_router_test.rs
